--- a/01.JavaScriptDevelopmentIntroduction/2.CircleArea/circle-area.html
+++ b/01.JavaScriptDevelopmentIntroduction/2.CircleArea/circle-area.html
@@ -3,7 +3,6 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>Circle area</title>
-    <script src="circle-area.js" type="text/javascript"></script>
 </head>
 <body>
     <div id="first-div"></div>
@@ -13,11 +12,11 @@
     <input type="text" id="radius" name="radius" />
     <button onclick="printUserArea()">Calculate</button>
     <div id="result"></div>
-
+    <script src="circle-area.js" type="text/javascript"></script>
     <script>
         function printAreas() {
-            document.getElementById('first-div').innerText = 'r = 7; area = ' + calcCircleArea(7),
-            document.getElementById('second-div').innerText = 'r = 1.5; area = ' +  calcCircleArea(1.5),
+            document.getElementById('first-div').innerText = 'r = 7; area = ' + calcCircleArea(7);
+            document.getElementById('second-div').innerText = 'r = 1.5; area = ' +  calcCircleArea(1.5);
             document.getElementById('third-div').innerText = 'r = 20; area = ' + calcCircleArea(20);
         }
 
